--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://www.instagram.com/rafaelfreitas09/" target="_blank" rel="external">Rafael Freitas</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/rafafreitasss/" target="_blank" rel="external">Rafael Freitas</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
